minor ui updates

--- a/Evvy/index.html
+++ b/Evvy/index.html
@@ -122,7 +122,7 @@
       <div class="container dflex_basic_5 dflex_wrap">
         <div class="item">
           <span class="fa-solid fa-calendar icon"></span>
-          <h4><span class="counter">15</span>+</h4>
+          <h4><span class="counter">16</span>+</h4>
           <h5>Years of Experience</h5>
         </div>
 
@@ -165,8 +165,8 @@
           <div class="item">
             <h4>For Engineers</h4>
             <p>
-              Our acoustical consulting services provide engineers
-              with specialized expertise to address complex noise and vibration
+              Our acoustical consulting services provide engineers with
+              specialized expertise to address complex noise and vibration
               challenges in engineering projects. Through collaborative
               partnerships, we offer customized solutions that enhance the
               acoustical performance of structures and systems, ensuring
@@ -176,11 +176,11 @@
           <div class="item">
             <h4>For Contractors</h4>
             <p>
-              We provide specialized acoustical consulting
-              services tailored to the needs of contractors. Our expertise in
-              construction noise control, sound attenuating materials, and
-              regulatory compliance ensures that your projects meet the highest
-              standards for sound management and environmental impact.
+              We provide specialized acoustical consulting services tailored to
+              the needs of contractors. Our expertise in construction noise
+              control, sound attenuating materials, and regulatory compliance
+              ensures that your projects meet the highest standards for sound
+              management and environmental impact.
             </p>
           </div>
         </div>
@@ -191,10 +191,14 @@
       <div class="container">
         <h2>Sectors</h2>
 
-        <div class="owl-carousel owl-theme">
+        <div class="dgrid_basic">
           <div class="item">
-            <span class="fa-solid fa-stethoscope icon"></span>
-            <h4>Hospitals</h4>
+            <a href="/healthcare.html">
+              <div>
+                <span class="fa-solid fa-stethoscope icon"></span>
+                <h4>Healthcare</h4>
+              </div>
+            </a>
           </div>
           <div class="item">
             <span class="fa-solid fa-graduation-cap icon"></span>
@@ -283,6 +287,36 @@
             </div>
           </div>
 
+          <div class="item">
+            <div class="itemcontent flf">
+              <div class="thumb flf">
+                <img
+                  src="images/pic_4.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+              </div>
+              <div class="text flf">
+                <h3>Industrial Noise Control</h3>
+                <p></p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="itemcontent flf">
+              <div class="thumb flf">
+                <img
+                  src="images/pic_4.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+              </div>
+              <div class="text flf">
+                <h3>Transportation Noise Control</h3>
+                <p></p>
+              </div>
+            </div>
+          </div>
           <div class="item">
             <div class="itemcontent flf">
               <div class="thumb flf">
