updates from chris

--- a/Evvy/index.html
+++ b/Evvy/index.html
@@ -40,7 +40,7 @@
   <body id="home">
     <section class="topbar flf zidx5">
       <div class="container">
-        <h3>
+        <!-- <h3>
           <a href="tel:#"
             ><span class="fa-solid fa-phone"></span>+1 (704) 516-7004</a
           >
@@ -49,7 +49,7 @@
             ><span class="fa-solid fa-envelope"></span>
             acousticalinsights@gmail.com</a
           >
-        </h3>
+        </h3> -->
       </div>
     </section>
     <!--topbar-->
@@ -83,13 +83,34 @@
 
     <section class="banner">
       <div class="container">
-        <h5>We make Acoustical Design Easy.</h5>
+        <h5>Acoustical Consulting and Engineering</h5>
       </div>
-      <img
-        src="images/hall.jpg"
-        alt=""
-        class="img_basic imgfit_basic aspectratio_16_8"
-      />
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img
+            src="images/auditorium.jpg"
+            alt=""
+            class="img_basic imgfit_basic aspectratio_16_8"
+          />
+          <div class="note">An auditorium</div>
+        </div>
+        <div class="item">
+          <img
+            src="images/helipad.jpg"
+            alt=""
+            class="img_basic imgfit_basic aspectratio_16_8"
+          />
+          <div class="note">A helipad</div>
+        </div>
+        <div class="item">
+          <img
+            src="images/mri.webp"
+            alt=""
+            class="img_basic imgfit_basic aspectratio_16_8"
+          />
+          <div class="note">An MRI Machine</div>
+        </div>
+      </div>
     </section>
     <!--/banner-->
 
@@ -193,7 +214,7 @@
 
         <div class="dgrid_basic">
           <div class="item">
-            <a href="/healthcare.html">
+            <a href="/Evvy/healthcare.html">
               <div>
                 <span class="fa-solid fa-stethoscope icon"></span>
                 <h4>Healthcare</h4>
@@ -217,11 +238,11 @@
             <h4>Hospitality</h4>
           </div>
           <div class="item">
-            <span class="fa-solid fa-bus icon"></span>
+            <span class="fa-solid fa-plane icon"></span>
             <h4>Transportation</h4>
           </div>
           <div class="item">
-            <span class="fa-solid fa-truck icon"></span>
+            <span class="fa-solid fa-industry icon"></span>
             <h4>Industrial</h4>
           </div>
         </div>
