update service and sectors and contact script

--- a/Evvy/index.html
+++ b/Evvy/index.html
@@ -85,8 +85,9 @@
       <div class="container">
         <h5>Acoustical Consulting and Engineering</h5>
       </div>
-      <div class="owl-carousel owl-theme">
+      <div class="owl-carousel owl-theme banner-owl-carousel">
         <div class="item">
+          
           <img
             src="images/auditorium.jpg"
             alt=""
@@ -110,6 +111,8 @@
           />
           <div class="note">An MRI Machine</div>
         </div>
+
+        
       </div>
     </section>
     <!--/banner-->
@@ -214,7 +217,7 @@
 
         <div class="dgrid_basic">
           <div class="item">
-            <a href="/Evvy/healthcare.html">
+            <a href="/Evvy/healthcare">
               <div>
                 <span class="fa-solid fa-stethoscope icon"></span>
                 <h4>Healthcare</h4>
