update php contact form

--- a/Evvy/healthcare/index.html
+++ b/Evvy/healthcare/index.html
@@ -161,5 +161,13 @@
         </div>
       </div>
     </section>
+    <footer class="flf">
+      <div class="container dflex_basic dflex_wrap">
+        <div class="copyright">
+          Copyright &copy; <span class="year"></span> 2024 <br />
+          Christopher Barnobi - Acoustical Insights
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
