--- a/Evvy/environment/index.html
+++ b/Evvy/environment/index.html
@@ -15,7 +15,10 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <link rel="stylesheet" href="../owl-slider/assets/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../owl-slider/assets/owl.theme.default.min.css" />
+    <link
+      rel="stylesheet"
+      href="../owl-slider/assets/owl.theme.default.min.css"
+    />
     <link rel="stylesheet" href="../fonts/icons-fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="../fonts/icons-linear.css" />
     <link href="../bxslider/jquery.bxslider.css" rel="stylesheet" />
@@ -64,22 +67,20 @@
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Healthcare</h2>
+        <h2>Environment</h2>
 
         <div>
           <img
             class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/MechanicalNoise.jpg"
+            src="../images/auditorium.png"
           />
           <div class="top-text">
             <p>
-              With HIPPA regulations and privacy an important concern for new
-              and remodeled healthcare facilities, acoustical consulting can
-              improve the experience for both medical professionals and
-              patients. Acoustical Insights has experience working on sound
-              isolation issues between patient rooms, mechanical noise from
-              building equipment, and room acoustics where auditorium are part
-              of a healthcare campus.
+              Environmental Noise is a concern at national, regional, and local
+              levels. Acoustical Insights has experience documenting noise
+              impact for NEPA and proposing mitigation measures to assure
+              projects have no adverse impacts. Similarly, in California, Chris
+              has work on CEQA projects all across the state.
             </p>
           </div>
         </div>
@@ -87,17 +88,10 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
-            <li>MRI and CT machine noise and vibration control</li>
-            <li>
-              HIPPA privacy using sound isolation design or sound masking
-              systems
-            </li>
-            <li>Mechanical Noise from building systems</li>
-            <li>
-              Exterior to Interior noise control where transportation source
-              exist near proposal medical facilties
-            </li>
-            <li>Helipad design for noise and vibration</li>
+            <li>Auto traffic noise assessments</li>
+            <li>Aircraft noise assessments</li>
+            <li>Mechanical Noise assessments</li>
+            <li>Construction Noise Analysis, Mitigation, and Monitoring</li>
           </ul>
         </div>
 
@@ -129,11 +123,8 @@
                 <p>HVAC Systems, Fans, Hospitals</p>
               </div>
             </div>
-            
           </div>
-          <div class="owl-nav">
-
-          </div>
+          <div class="owl-nav"></div>
         </div>
       </div>
     </section>
