--- a/Evvy/index.html
+++ b/Evvy/index.html
@@ -39,18 +39,7 @@
 
   <body id="home">
     <section class="topbar flf zidx5">
-      <div class="container">
-        <!-- <h3>
-          <a href="tel:#"
-            ><span class="fa-solid fa-phone"></span>+1 (704) 516-7004</a
-          >
-          &nbsp; &nbsp; &nbsp;
-          <a href="mailto:#"
-            ><span class="fa-solid fa-envelope"></span>
-            acousticalinsights@gmail.com</a
-          >
-        </h3> -->
-      </div>
+      <div class="container"></div>
     </section>
     <!--topbar-->
 
@@ -87,7 +76,6 @@
       </div>
       <div class="owl-carousel owl-theme banner-owl-carousel">
         <div class="item">
-          
           <img
             src="images/auditorium.jpg"
             alt=""
@@ -111,8 +99,6 @@
           />
           <div class="note">An MRI Machine</div>
         </div>
-
-        
       </div>
     </section>
     <!--/banner-->
@@ -153,21 +139,19 @@
         <div class="item">
           <span class="fa-regular fa-face-smile icon"></span>
           <h4>Happy Clients</h4>
-          <h5>References Available upon Request</h5>
+          <h5 id="clients">References Available upon Request</h5>
         </div>
-      </div>
 
-      <div class="container dflex_basic_5 dflex_wrap">
         <div class="item">
           <span class="fa-solid fa-star icon"></span>
           <h4>Credentials</h4>
           <h5>INCE Bd Cert. and PE</h5>
         </div>
 
-        <div class="item">
+        <div class="item" id="team">
           <span class="fa-solid fa-person icon"></span>
           <h4>Team Player</h4>
-          <h5>Experience in a wide range of sizes and styles</h5>
+          <h5 id="team">Experience in a wide range of sizes and styles</h5>
         </div>
       </div>
     </section>
@@ -225,28 +209,22 @@
             </a>
           </div>
           <div class="item">
-            <span class="fa-solid fa-graduation-cap icon"></span>
-            <h4>Education</h4>
+            <a href="/Evvy/education/index.html">
+              <span class="fa-solid fa-graduation-cap icon"></span>
+              <h4>Education</h4>
+            </a>
           </div>
           <div class="item">
-            <span class="fa-solid fa-house icon"></span>
-            <h4>Residential</h4>
+            <a href="/Evvy/environment/index.html">
+              <span class="fa-solid fa-tree icon"></span>
+              <h4>Environment</h4>
+            </a>
           </div>
           <div class="item">
-            <span class="fa-solid fa-building icon"></span>
-            <h4>Commercial</h4>
-          </div>
-          <div class="item">
-            <span class="fa-solid fa-hotel icon"></span>
-            <h4>Hospitality</h4>
-          </div>
-          <div class="item">
-            <span class="fa-solid fa-plane icon"></span>
-            <h4>Transportation</h4>
-          </div>
-          <div class="item">
-            <span class="fa-solid fa-industry icon"></span>
-            <h4>Industrial</h4>
+            <a href="/Evvy/hospitality/index.html">
+              <span class="fa-solid fa-building icon"></span>
+              <h4>Hospitality</h4>
+            </a>
           </div>
         </div>
       </div>
@@ -258,48 +236,49 @@
 
         <div class="service_items dflex_basic_2 dflex_wrap">
           <div class="item">
-            <div class="itemcontent flf">
-              <div class="thumb flf">
-                <img
-                  src="images/pic_1.jpg"
-                  alt=""
-                  class="img_basic imgfit_basic aspectratio_3_2"
-                />
+            <a href="/Evvy/sv-measurements/index.html">
+              <div class="itemcontent flf">
+                <div class="thumb flf">
+                  <img
+                    src="images/SoundVisualization.png"
+                    alt=""
+                    class="img_basic imgfit_basic aspectratio_3_2"
+                  />
+                </div>
+                <div class="text flf">
+                  <h3>Sound and Vibration Measurements</h3>
+                  <p>
+                    <!-- Schools, Auditoriums, Gymnasiums, Concert Halls, High End
+                  Conference Rooms, Lobbies, Ballrooms -->
+                  </p>
+                </div>
               </div>
-              <div class="text flf">
-                <h3>Room Acoustics</h3>
-                <p>
-                  Schools, Auditoriums, Gymnasiums, Concert Halls, High End
-                  Conference Rooms, Lobbies, Ballrooms
-                </p>
+            </a>
+          </div>
+
+          <div class="item">
+            <a href="/Evvy/mixed-use/index.html">
+              <div class="itemcontent flf">
+                <div class="thumb flf">
+                  <img
+                    src="images/OpenOffice.jpg"
+                    alt=""
+                    class="img_basic imgfit_basic aspectratio_3_2"
+                  />
+                </div>
+                <div class="text flf">
+                  <h3>Mixed Use</h3>
+                  <p></p>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
 
           <div class="item">
             <div class="itemcontent flf">
               <div class="thumb flf">
                 <img
-                  src="images/pic_2.jpg"
-                  alt=""
-                  class="img_basic imgfit_basic aspectratio_3_2"
-                />
-              </div>
-              <div class="text flf">
-                <h3>Sound Isolation</h3>
-                <p>
-                  Internal-Internal (Walls, Doors, Ceilings), External-Internal
-                  (Windows, Doors), Multi Family Buildings, Mechanical Systems
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="itemcontent flf">
-              <div class="thumb flf">
-                <img
-                  src="images/pic_3.jpg"
+                  src="images/Data_Center.jpg"
                   alt=""
                   class="img_basic imgfit_basic aspectratio_3_2"
                 />
@@ -312,49 +291,21 @@
           </div>
 
           <div class="item">
-            <div class="itemcontent flf">
-              <div class="thumb flf">
-                <img
-                  src="images/pic_4.jpg"
-                  alt=""
-                  class="img_basic imgfit_basic aspectratio_3_2"
-                />
+            <a href="/Evvy/industrial-noise/">
+              <div class="itemcontent flf">
+                <div class="thumb flf">
+                  <img
+                    src="images/Traffic.jpg"
+                    alt=""
+                    class="img_basic imgfit_basic aspectratio_3_2"
+                  />
+                </div>
+                <div class="text flf">
+                  <h3>Industrial Noise Control</h3>
+                  <p></p>
+                </div>
               </div>
-              <div class="text flf">
-                <h3>Industrial Noise Control</h3>
-                <p></p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="itemcontent flf">
-              <div class="thumb flf">
-                <img
-                  src="images/pic_4.jpg"
-                  alt=""
-                  class="img_basic imgfit_basic aspectratio_3_2"
-                />
-              </div>
-              <div class="text flf">
-                <h3>Transportation Noise Control</h3>
-                <p></p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="itemcontent flf">
-              <div class="thumb flf">
-                <img
-                  src="images/pic_4.jpg"
-                  alt=""
-                  class="img_basic imgfit_basic aspectratio_3_2"
-                />
-              </div>
-              <div class="text flf">
-                <h3>Environmental Noise</h3>
-                <p></p>
-              </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
@@ -460,7 +411,6 @@
         <h3>Reach out to me for inquiries, quotes, or questions</h3>
 
         <div class="contactblock flf dflex_basic_2 dflex_wrap">
-
           <form
             class="contactform"
             id="contactform"
@@ -480,7 +430,7 @@
               Send Message <span class="fa-solid fa-angle-right"></span>
             </button>
           </form>
-          <div id="form-response" style="margin-top: 10px; color: green;"></div>
+          <div id="form-response" style="margin-top: 10px; color: green"></div>
         </div>
         <!--contactblock-->
       </div>
