--- a/Evvy/industrial-noise/index.html
+++ b/Evvy/industrial-noise/index.html
@@ -15,7 +15,10 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <link rel="stylesheet" href="../owl-slider/assets/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../owl-slider/assets/owl.theme.default.min.css" />
+    <link
+      rel="stylesheet"
+      href="../owl-slider/assets/owl.theme.default.min.css"
+    />
     <link rel="stylesheet" href="../fonts/icons-fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="../fonts/icons-linear.css" />
     <link href="../bxslider/jquery.bxslider.css" rel="stylesheet" />
@@ -64,22 +67,19 @@
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Healthcare</h2>
+        <h2>Industrial Noise</h2>
 
         <div>
           <img
             class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/MechanicalNoise.jpg"
+            src="../images/HarborView.png"
           />
           <div class="top-text">
             <p>
-              With HIPPA regulations and privacy an important concern for new
-              and remodeled healthcare facilities, acoustical consulting can
-              improve the experience for both medical professionals and
-              patients. Acoustical Insights has experience working on sound
-              isolation issues between patient rooms, mechanical noise from
-              building equipment, and room acoustics where auditorium are part
-              of a healthcare campus.
+              Acoustical Insights offers a variety of industrial noise and
+              vibration analyses and control services. We have experience
+              designing, measuring, and mitigating noise and vibration on large
+              industrial facilities and smaller local equipment.
             </p>
           </div>
         </div>
@@ -87,17 +87,9 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
-            <li>MRI and CT machine noise and vibration control</li>
-            <li>
-              HIPPA privacy using sound isolation design or sound masking
-              systems
-            </li>
-            <li>Mechanical Noise from building systems</li>
-            <li>
-              Exterior to Interior noise control where transportation source
-              exist near proposal medical facilties
-            </li>
-            <li>Helipad design for noise and vibration</li>
+            <li>Noise Impact Studies</li>
+            <li>OSHA compliance analysis and testing</li>
+            <li>Property Line noise and vibration modeling and measurements</li>
           </ul>
         </div>
 
@@ -129,11 +121,8 @@
                 <p>HVAC Systems, Fans, Hospitals</p>
               </div>
             </div>
-            
           </div>
-          <div class="owl-nav">
-
-          </div>
+          <div class="owl-nav"></div>
         </div>
       </div>
     </section>
