--- a/Evvy/mixed-use/index.html
+++ b/Evvy/mixed-use/index.html
@@ -15,7 +15,10 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <link rel="stylesheet" href="../owl-slider/assets/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../owl-slider/assets/owl.theme.default.min.css" />
+    <link
+      rel="stylesheet"
+      href="../owl-slider/assets/owl.theme.default.min.css"
+    />
     <link rel="stylesheet" href="../fonts/icons-fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="../fonts/icons-linear.css" />
     <link href="../bxslider/jquery.bxslider.css" rel="stylesheet" />
@@ -64,22 +67,26 @@
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Healthcare</h2>
+        <h2>Mixed Uses</h2>
 
         <div>
           <img
             class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/MechanicalNoise.jpg"
+            src="../images/SoundVisualization2.png"
           />
           <div class="top-text">
             <p>
-              With HIPPA regulations and privacy an important concern for new
-              and remodeled healthcare facilities, acoustical consulting can
-              improve the experience for both medical professionals and
-              patients. Acoustical Insights has experience working on sound
-              isolation issues between patient rooms, mechanical noise from
-              building equipment, and room acoustics where auditorium are part
-              of a healthcare campus.
+              Both residential and commercial uses require special attention for
+              acoustical design and performance. On the residential side, people
+              expect their home to be a comfortable space with low or no noise
+              intrusion. Similarly on the commercial side, office spaces require
+              the right balance of worker’s energy and privacy. Retail
+              establishments can benefit from acoustical consideration to help
+              encourage customers to focus on merchandise or sales. When larger
+              projects bring residential and commercial spaces together, the
+              design should carefully weigh those different considerations, and
+              Acoustical Insights a partner for your team with experience in all
+              of these designs.
             </p>
           </div>
         </div>
@@ -87,17 +94,9 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
-            <li>MRI and CT machine noise and vibration control</li>
-            <li>
-              HIPPA privacy using sound isolation design or sound masking
-              systems
-            </li>
-            <li>Mechanical Noise from building systems</li>
-            <li>
-              Exterior to Interior noise control where transportation source
-              exist near proposal medical facilties
-            </li>
-            <li>Helipad design for noise and vibration</li>
+            <li>International Building Code (IBC) design for acoustics</li>
+            <li>Mechanical Noise Control</li>
+            <li>Sound Isolation            </li>
           </ul>
         </div>
 
@@ -129,11 +128,8 @@
                 <p>HVAC Systems, Fans, Hospitals</p>
               </div>
             </div>
-            
           </div>
-          <div class="owl-nav">
-
-          </div>
+          <div class="owl-nav"></div>
         </div>
       </div>
     </section>
