simplify file structure

--- a/Evvy/services-sectors/education.html
+++ b/Evvy/services-sectors/education.html
@@ -15,7 +15,10 @@
     <link rel="icon" type="image/png" href="images/favicon.png" />
 
     <link rel="stylesheet" href="../owl-slider/assets/owl.carousel.min.css" />
-    <link rel="stylesheet" href="../owl-slider/assets/owl.theme.default.min.css" />
+    <link
+      rel="stylesheet"
+      href="../owl-slider/assets/owl.theme.default.min.css"
+    />
     <link rel="stylesheet" href="../fonts/icons-fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="../fonts/icons-linear.css" />
     <link href="../bxslider/jquery.bxslider.css" rel="stylesheet" />
@@ -29,7 +32,7 @@
     <script src="../contactform/contactform.js"></script>
   </head>
 
-  <body id="healthcare">
+  <body id="education">
     <section class="topbar flf zidx5">
       <div class="container"></div>
     </section>
@@ -64,22 +67,21 @@
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Healthcare</h2>
+        <h2>Education</h2>
 
         <div>
           <img
             class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/MechanicalNoise.jpg"
+            src="../images/auditorium.png"
           />
           <div class="top-text">
             <p>
-              With HIPPA regulations and privacy an important concern for new
-              and remodeled healthcare facilities, acoustical consulting can
-              improve the experience for both medical professionals and
-              patients. Acoustical Insights has experience working on sound
-              isolation issues between patient rooms, mechanical noise from
-              building equipment, and room acoustics where auditorium are part
-              of a healthcare campus.
+              Across all ages and educational institutions, the learning
+              environment is an important space to have high quality acoustics.
+              For the teacher who strains to be heard at the back row, the
+              classroom can support clear speech for all students. Gymnasiums
+              are regularly used for assemblies in many schools, and this can
+              lead to poor sound for the audience during those gatherings.
             </p>
           </div>
         </div>
@@ -87,17 +89,17 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
-            <li>MRI and CT machine noise and vibration control</li>
             <li>
-              HIPPA privacy using sound isolation design or sound masking
-              systems
+              Room acoustics for auditorium, classrooms, bandrooms, and gyms
             </li>
-            <li>Mechanical Noise from building systems</li>
             <li>
-              Exterior to Interior noise control where transportation source
-              exist near proposal medical facilties
+              Sound isolation design between classrooms, especially where music
+              practice takes place
             </li>
-            <li>Helipad design for noise and vibration</li>
+            <li>
+              Mechanical noise control so the air conditioning system does
+              prevent some students from hearing instructions
+            </li>
           </ul>
         </div>
 
@@ -129,11 +131,8 @@
                 <p>HVAC Systems, Fans, Hospitals</p>
               </div>
             </div>
-            
           </div>
-          <div class="owl-nav">
-
-          </div>
+          <div class="owl-nav"></div>
         </div>
       </div>
     </section>
