--- a/Evvy/services-sectors/healthcare.html
+++ b/Evvy/services-sectors/healthcare.html
@@ -40,7 +40,7 @@
 
     <header class="p_fixed_basic zidx2 ts_1 fw">
       <div class="container dflex_basic">
-        <a href="/Evvy/" class="logo"
+        <a href="/Evvy" class="logo"
           ><img src="../images/logo.png" alt=""
         /></a>
 
@@ -67,21 +67,22 @@
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Education</h2>
+        <h2>Healthcare</h2>
 
         <div>
           <img
             class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/auditorium.png"
+            src="../images/MechanicalNoise.jpg"
           />
           <div class="top-text">
             <p>
-              Across all ages and educational institutions, the learning
-              environment is an important space to have high quality acoustics.
-              For the teacher who strains to be heard at the back row, the
-              classroom can support clear speech for all students. Gymnasiums
-              are regularly used for assemblies in many schools, and this can
-              lead to poor sound for the audience during those gatherings.
+              With HIPPA regulations and privacy an important concern for new
+              and remodeled healthcare facilities, acoustical consulting can
+              improve the experience for both medical professionals and
+              patients. Acoustical Insights has experience working on sound
+              isolation issues between patient rooms, mechanical noise from
+              building equipment, and room acoustics where auditorium are part
+              of a healthcare campus.
             </p>
           </div>
         </div>
@@ -89,17 +90,17 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
+            <li>MRI and CT machine noise and vibration control</li>
             <li>
-              Room acoustics for auditorium, classrooms, bandrooms, and gyms
+              HIPPA privacy using sound isolation design or sound masking
+              systems
             </li>
+            <li>Mechanical Noise from building systems</li>
             <li>
-              Sound isolation design between classrooms, especially where music
-              practice takes place
+              Exterior to Interior noise control where transportation source
+              exist near proposal medical facilties
             </li>
-            <li>
-              Mechanical noise control so the air conditioning system does
-              prevent some students from hearing instructions
-            </li>
+            <li>Helipad design for noise and vibration</li>
           </ul>
         </div>
 
@@ -131,8 +132,11 @@
                 <p>HVAC Systems, Fans, Hospitals</p>
               </div>
             </div>
+            
           </div>
-          <div class="owl-nav"></div>
+          <div class="owl-nav">
+
+          </div>
         </div>
       </div>
     </section>
